src/main/webapp/content/scss/quiz.scss
/* ... */
.question:first-of-type {
    margin-top: 18px;
}

.edit-quiz .quiz-options .form-group > div.time-picker {
    margin-top: -15px;
    margin-left: 0px;
}

.question {
    width: 100%;
    box-sizing: border-box;
    border: 1px solid lightgrey;
    margin-bottom: 18px;
    background: #fefefe;

    .mc-question,
    .dnd-question,
    .sa-question {
        width: 100%;
        box-sizing: border-box;
        border: none;
        margin-bottom: 0;
        padding: 0;
    }

    .question-card-header {
        padding: 15px 5px 5px 5px;
    }

    .question-card-body,
    .preview-mc-question,
    .preview-dnd-question,
    .preview-sa-question {
        padding: 20px;
    }

    .question-collapse {
        margin-top: -15px;
        width: 3.25rem;
    }

    .delete-button,
    .duplicate-button {
        cursor: pointer;
        display: flex;
        align-items: center;
        padding: 4px;
    }

    .delete-button:hover {
        color: red;
    }

    .duplicate-button:hover {
        color: #0f6ab4;
    }

    .question-title {
        flex: 1;

        input.form-control {
            width: 100%;
        }
    }

    .markupEditorArea {
        margin: 0 4px;

        .toolbar {
            margin: 4px 0;
        }
    }

    .question-content {
        display: flex;
        flex-flow: column;
        > * {
            height: 350px;
        }
    }
}

.background-editor-color {
    background: #f8f9fa;
}

.background-editor-high {
    min-height: 150px;
}

.mc-question,
.dnd-question,
.sa-question {
    position: relative;
    width: 100%;
    box-sizing: border-box;
    border: 1px solid lightgrey;
    margin-bottom: 18px;
    padding: 20px;
    background: #fefefe;

    h2 {
        margin: 0 90px 0 0;

        span {
            color: grey;
        }
    }

    p {
        margin: 10px 0;
        font-size: 16px;
    }

    &.result {
        border-color: green;

        &.incorrect {
            border-color: orange;
        }
    }

    .question-title-display {
        max-width: 80%;
    }

    .question-score {
        position: absolute;
        top: 20px;
        right: 20px;
        max-width: 30%;

        @media (max-width: 900px) {
            position: relative;
            top: 0;
            right: 0;
            max-width: 100%;
        }

        &.result {
            font-weight: bold;
            color: green;

            &.incorrect {
                color: orange;
            }
        }
    }

    .label {
        cursor: pointer;
        margin: 2px 0;
    }

    .answer-options {
        margin-top: 20px;
    }

    .answer-option {
        display: flex;
        align-items: center;
        outline: none !important;
        border: 1px solid lightgrey;
        margin: 4px 0;
        padding: 6px 10px;

        .selection {
            width: 36px;
            margin-left: 16px;
        }

        .content {
            display: flex;
            flex: 1;
            align-items: center;

            .text {
                flex: 1;
                padding-right: 8px;
                font-size: 16px;
            }

            .hint {
                display: flex;
                flex-direction: column;
                align-items: flex-end;
                font-size: 18px;
            }
        }

        &:hover {
            background: #fafafa;
        }

        &.click-disabled {
            cursor: not-allowed;

            &:hover {
                background: inherit;
            }
        }
    }

    &.disabled {
        color: dimgrey;
        background: #fafafa;
    }
}

.edit-dnd-question,
.edit-sa-question,
.dnd-question,
.sa-question {
    .background-area {
        position: relative;
        -webkit-user-select: none;
        -moz-user-select: none;
        -ms-user-select: none;
        user-select: none;

        .click-layer {
            position: absolute;
            top: 0;
            left: 0;
            bottom: 0;
            right: 0;
            z-index: 1;

            .drop-location {
                position: absolute;
                display: flex;
                flex-direction: row;
                align-items: flex-start;
                justify-content: flex-end;
            }
        }

        img {
            max-width: 100%;
        }
    }

    .instructions {
        display: flex;
        justify-content: space-between;
        margin: 10px 0;
        font-weight: 500;
    }

    .drag-items {
        margin: 6px 0;
        width: 100%;
        min-height: 180px;
        display: flex;
        flex-direction: row;
        flex-wrap: wrap;
        justify-content: space-evenly;
    }

    .ellipsis {
        text-overflow: ellipsis;
        /* Required for text-overflow to do anything */
        white-space: nowrap;
        overflow: hidden;
    }
}
/* ... */

